--- a/profil/index.html
+++ b/profil/index.html
@@ -39,7 +39,30 @@ header p {
   opacity:0.9;
   color: #f4f4f5;
 }
+/* === WIZYTÓWKA ELEKTRYKA === */
+.about-box {
+  margin: 30px auto;
+  padding: 25px 30px;
+  max-width: 720px;
+  background: #f8fafc;
+  border-left: 5px solid #0B5FA5;
+  border-radius: 10px;
+  text-align: left;
+}
 
+.about-box h3 {
+  margin: 0 0 12px;
+  font-size: 18px;
+  font-weight: 700;
+  color: #0B5FA5;
+}
+
+#opis {
+  font-size: 16.5px;
+  line-height: 1.7;
+  color: #1f2937;
+  white-space: pre-line;
+}
 /* PRZYCISK UDOSTEPNIJ */
 .share-btn {
   background-color: #0B5FA5;
