--- a/profil/index.html
+++ b/profil/index.html
@@ -148,7 +148,10 @@ section {
 
 <section id="profil" class="hidden">
   <span id="status" class="badge"></span>
+  <div class="about-box">
+  <h3>⚡ Zakres usług / O mnie</h3>
   <p id="opis"></p>
+</div>
 
   <p><strong>Email:</strong> <span id="email"></span></p>
   <p><strong>Telefon:</strong> <span id="telefon"></span></p>
